--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
         <h1>Isp-performance</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/Tiggar/isp-performance">View the Project on GitHub <small>Tiggar/isp-performance</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/Tiggar/isp-performance/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Tiggar/isp-performance/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Tiggar/isp-performance">View On <strong>GitHub</strong></a></li>
-        </ul>
+<!--
+   -        <p class="view"><a href="https://github.com/Tiggar/isp-performance">View the Project on GitHub <small>Tiggar/isp-performance</small></a></p>
+   -
+   -
+   -        <ul>
+   -          <li><a href="https://github.com/Tiggar/isp-performance/zipball/master">Download <strong>ZIP File</strong></a></li>
+   -          <li><a href="https://github.com/Tiggar/isp-performance/tarball/master">Download <strong>TAR Ball</strong></a></li>
+   -          <li><a href="https://github.com/Tiggar/isp-performance">View On <strong>GitHub</strong></a></li>
+   -        </ul>
+   -->
       </header>
-      <section>
+      <!--
+         -<section>
+	 -->
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -59,7 +63,9 @@ $ git checkout gh-pages
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+      <!--
+         -</section>
+	 -->
       <footer>
         <p>This project is maintained by <a href="https://github.com/Tiggar">Tiggar</a></p>
 	<!--
