Remove overlaying header and footer.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
+    <!--
+       -<div class="wrapper">
+       -->
       <header>
         <h1>Isp-performance</h1>
         <p></p>
@@ -32,6 +34,8 @@
       <!--
          -<section>
 	 -->
+        <h1>Isp-performance</h1>
+        <p></p>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -66,12 +70,14 @@ $ git checkout gh-pages
       <!--
          -</section>
 	 -->
-      <footer>
         <p>This project is maintained by <a href="https://github.com/Tiggar">Tiggar</a></p>
-	<!--
-	   -<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-	   -->
-      </footer>
+
+      <!--
+         -<footer>
+         -  <p>This project is maintained by <a href="https://github.com/Tiggar">Tiggar</a></p>
+	 -  <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+         -</footer>
+	 -->
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
