Remove <header> tag from index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!--
        -<div class="wrapper">
        -->
-      <header>
+      <!--
+         -<header>
+	 -->
         <h1>Isp-performance</h1>
         <p></p>
 
@@ -30,7 +32,9 @@
    -          <li><a href="https://github.com/Tiggar/isp-performance">View On <strong>GitHub</strong></a></li>
    -        </ul>
    -->
-      </header>
+      <!--
+         -</header>
+	 -->
       <!--
          -<section>
 	 -->
