Removing double header in index.html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       <!--
          -<header>
 	 -->
-        <h1>Isp-performance</h1>
-        <p></p>
+	<!--
+           -<h1>Isp-performance</h1>
+           -<p></p>
+	   -->
 
 <!--
    -        <p class="view"><a href="https://github.com/Tiggar/isp-performance">View the Project on GitHub <small>Tiggar/isp-performance</small></a></p>
