Corrected image urls in index.html

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 <a id="daten" class="anchor" href="#daten" aria-hidden="true"><span class="octicon octicon-link"></span></a>Daten</h2>
 
 <p>Charts über die Verfügbarkeit von Telekom im Frankfurter Nordend.</p>
-<h3>In den letzten 12h</h3>
-<img src="charts/Google_last_43200.png" alt="google - last 12h" /><br />
-<img src="charts/heise_last_43200.png" alt="heise.de - last 12" />
-<h3>In den letzten 24h</h3>
-<img src="charts/Google_last_86400.png" alt="google - last 24h" /><br />
-<img src="charts/heise_last_86400.png" alt="heise.de - last 24h" />
+<h3>In den letzten 3h</h3>
+<img src="charts/Google_last_10800.png" alt="google.de - last 3h" /><br />
+<img src="charts/Heise_last_10800.png" alt="heise.de - last 3h" />
+<h3>In den letzten 30h</h3>
+<img src="charts/Google_last_108000.png" alt="google.de - last 30h" /><br />
+<img src="charts/Heise_last_108000.png" alt="heise.de - last 30h" />
 <h3>In den letzten 10 Tagen</h3>
-<img src="charts/Google_last_864000.png" alt="google - last 10 days" /><br />
-<img src="charts/heise_last_864000.png" alt="heise.de - last 10 days" />
+<img src="charts/Google_last_864000.png" alt="google.de - last 10 days" /><br />
+<img src="charts/Heise_last_864000.png" alt="heise.de - last 10 days" />
 
 <h2>
 <a id="technologie" class="anchor" href="#technologie" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technologie</h2>
