--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Verfügbarkeit von Unitymedia in Frankfurt - by oehmiche</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
+    <title>Verfügbarkeit von Telekom in Frankfurt - by Tiggar</title>
+    <link rel="stylesheet" href="stylesheets/styles.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"><!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="wrapper">
-      <section>
-        <h1><span class="octicon octicon-link"></span>Verfügbarkeit von Telekom</h1>
-<h2>
-<a id="daten" class="anchor" href="#daten" aria-hidden="true"><span class="octicon octicon-link"></span></a>Daten</h2>
+        <section>
+            <h1>Verfügbarkeit von Telekom</h1>
 
-<p>Charts über die Verfügbarkeit von Telekom im Frankfurter Nordend.</p>
-<h3>In den letzten 12h</h3>
-<img src="charts/Google_last_43200.png" alt="google.de - last 12h" /><br />
-<img src="charts/Heise_last_43200.png" alt="heise.de - last 12h" />
-<h3>In den letzten 24h</h3>
-<img src="charts/Google_last_86400.png" alt="google.de - last 24h" /><br />
-<img src="charts/Heise_last_86400.png" alt="heise.de - last 24h" />
-<h3>In den letzten 10 Tagen</h3>
-<img src="charts/Google_last_864000.png" alt="google.de - last 10 days" /><br />
-<img src="charts/Heise_last_864000.png" alt="heise.de - last 10 days" />
+            <h2><a id="daten" class="anchor" href="#daten" aria-hidden="true"></a>Daten</h2>
 
-<h2>
-<a id="technologie" class="anchor" href="#technologie" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technologie</h2>
+            <p>Charts über die Verfügbarkeit von Telekom im Frankfurter Nordend.</p>
 
-<p>Die Verfügbarkeit und Verbindungs-Geschwindigkeit wird mittels <a href="https://github.com/oetiker/SmokePing">SmokePing</a> regelmässig gemessen und in Charts gezeichnet.
-Die Software läuft auf einem CubiTruck.</p>
-      </section>
-      <section>
-        <p>This project is maintained by <a href="https://github.com/Tiggar">Tiggar</a> with friendly support by <a href="https://github.com/oehmiche">oehmiche</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+            <h3>In den letzten 12h</h3><img src="charts/Google_last_43200.png" alt="google.de - last 12h"><br>
+            <img src="charts/Heise_last_43200.png" alt="heise.de - last 12h">
+
+            <p></p>
+
+            <h3>In den letzten 24h</h3><img src="charts/Google_last_86400.png" alt="google.de - last 24h"><br>
+            <img src="charts/Heise_last_86400.png" alt="heise.de - last 24h">
+
+            <p></p>
+
+            <h3>In den letzten 10 Tagen</h3><img src="charts/Google_last_864000.png" alt="google.de - last 10 days"><br>
+            <img src="charts/Heise_last_864000.png" alt="heise.de - last 10 days">
+
+            <p></p>
+
+            <h2><a id="technologie" class="anchor" href="#technologie" aria-hidden="true"></a>Technologie</h2>
+
+            <p>Die Verfügbarkeit und Verbindungs-Geschwindigkeit wird mittels <a href="https://github.com/oetiker/SmokePing">SmokePing</a> regelmässig gemessen und in Charts gezeichnet. Die Software läuft auf einem CubiTruck.</p>
         </section>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+
+        <section>
+            <p>This project is maintained by <a href="https://github.com/Tiggar">Tiggar</a> with friendly support by <a href="https://github.com/oehmiche">oehmiche</a></p>
+
+            <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        </section>
+    </div><script src="javascripts/scale.fix.js" type="text/javascript">
+</script>
+</body>
 </html>
